# Flight-data-analysis-system

./: .gitignore  README.md  ai_analyzer.py  app.py  base.html  custom.css  data_collector.py  insights.html  main.py  models.py  pyproject.toml  routes.py  web_scraper.py
templates/: analysis.html  insights.html
