[project]
name = "flight-data-analysis-system"
version = "1.0.0"
description = "Australian domestic flight market analytics dashboard"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "werkzeug>=3.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]
